# timecapsule

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_analysis.py  test_cli.py  test_recording.py
timecapsule/: __init__.py  __main__.py  recorder.py
